<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>me.chancesd.pvpmanager</groupId>
	<artifactId>pvpmanager-parent</artifactId>
	<packaging>pom</packaging>
	<version>${revision}</version>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<sonar.organization>chancesd</sonar.organization>
		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
		<revision>3.18.13</revision>
	</properties>

	<distributionManagement>
		<repository>
			<id>codemc-releases</id>
			<url>https://repo.codemc.io/repository/maven-releases/</url>
		</repository>
		<snapshotRepository>
			<id>codemc-snapshots</id>
			<url>https://repo.codemc.io/repository/maven-snapshots/</url>
		</snapshotRepository>
	</distributionManagement>

	<modules>
		<module>pvpmanager</module>
		<module>pvpmanager-folia</module>
	</modules>

	<scm>
		<connection>scm:git:https://github.com/ChanceSD/PvPManager.git</connection>
		<developerConnection>scm:git:git@github.com:ChanceSD/PvPManager.git</developerConnection>
		<url>https://github.com/ChanceSD/PvPManager</url>
		<tag>HEAD</tag>
	</scm>

	<build>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>versions-maven-plugin</artifactId>
				<version>2.16.2</version>
				<executions>
					<execution>
						<configuration>
							<excludeReactor>false</excludeReactor>
							<autoLinkItems>true</autoLinkItems>
							<allowMajorUpdates>true</allowMajorUpdates>
							<allowMinorUpdates>true</allowMinorUpdates>
							<allowSnapshots>true</allowSnapshots>
							<excludes>
								<exclude>com.massivecraft:FactionsUUID</exclude>
								<exclude>com.massivecraft:MassiveCore</exclude>
							</excludes>
						</configuration>
						<phase>post-clean</phase>
						<goals>
							<goal>display-plugin-updates</goal>
							<goal>display-dependency-updates</goal>
							<goal>display-parent-updates</goal>
							<goal>use-latest-versions</goal>
							<goal>update-child-modules</goal>
							<goal>update-properties</goal>
							<goal>update-parent</goal>
							<goal>commit</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.13.0</version>
				<configuration>
					<source>16</source>
					<target>16</target>
					<optimize>true</optimize>
					<showDeprecation>true</showDeprecation>
					<showWarnings>true</showWarnings>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>flatten-maven-plugin</artifactId>
				<version>1.6.0</version>
				<configuration>
					<updatePomFile>true</updatePomFile>
				</configuration>
				<executions>
					<execution>
						<id>flatten</id>
						<phase>process-resources</phase>
						<goals>
							<goal>flatten</goal>
						</goals>
					</execution>
					<execution>
						<id>flatten.clean</id>
						<phase>clean</phase>
						<goals>
							<goal>clean</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
						<phase>install</phase>
					</execution>
				</executions>
				<configuration>
					<doclint>-missing</doclint>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>coverage</id>
			<properties>
				<jacocoArg>${argLine}</jacocoArg>
			</properties>
			<build>
				<plugins>
					<plugin>
						<groupId>org.jacoco</groupId>
						<artifactId>jacoco-maven-plugin</artifactId>
						<version>0.8.12</version>
						<executions>
							<execution>
								<id>prepare-agent</id>
								<goals>
									<goal>prepare-agent</goal>
								</goals>
							</execution>
							<execution>
								<id>report</id>
								<goals>
									<goal>report</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>